# OpenCVAdvanced

./: .gitignore
01_display_image/: CMakeLists.txt  main.cpp
02_mat_basic/: CMakeLists.txt  main.cpp
03_scan_image/: CMakeLists.txt  main.cpp
04_mat_mask_operations/: CMakeLists.txt  main.cpp
