CMAKE_MINIMUM_REQUIRED(VERSION 3.5)
PROJECT(01_display_image VERSION 0.1.0)

INCLUDE(CTest)
ENABLE_TESTING()

FIND_PACKAGE(OpenCV REQUIRED)
INCLUDE_DIRECTORIES(${OpenCV_INCLUDE_DIRS})

ADD_EXECUTABLE(01_display_image main.cpp)

TARGET_LINK_LIBRARIES(01_display_image ${OpenCV_LIBS})

SET(CPACK_PROJECT_NAME ${PROJECT_NAME})
SET(CPACK_PROJECT_VERSION ${PROJECT_VERSION})
INCLUDE(CPack)
