CMAKE_MINIMUM_REQUIRED(VERSION 3.5)
PROJECT(03_scan_image VERSION 0.1.0)

INCLUDE(CTest)
ENABLE_TESTING()

FIND_PACKAGE(OpenCV REQUIRED)
INCLUDE_DIRECTORIES(${OpenCV_INCLUDE_DIRS})

ADD_EXECUTABLE(03_scan_image main.cpp)

TARGET_LINK_LIBRARIES(03_scan_image ${OpenCV_LIBS})

SET(CPACK_PROJECT_NAME ${PROJECT_NAME})
SET(CPACK_PROJECT_VERSION ${PROJECT_VERSION})
INCLUDE(CPack)
